--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "astro": "^4.6.3",
     "autoprefixer": "^10.4.15",
     "canvas-confetti": "^1.9.1",
-    "postcss": "^8.4.28",
+    "postcss": "^8.4.38",
+    "postcss-pxtorem": "^6.1.0",
     "tailwindcss": "^3.3.5"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.12"
   }
 }
