--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@astrojs/mdx": "^2.3.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.5.3",
     "@types/canvas-confetti": "^1.6.3",
     "astro": "^4.6.3",
     "autoprefixer": "^10.4.15",
