--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "canvas-confetti": "^1.9.1",
     "postcss": "^8.4.38",
     "postcss-pxtorem": "^6.1.0",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.4.3",
+    "tailwindcss-convert-px-to-rem": "^1.0.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12"
