--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.5.3",
     "@types/canvas-confetti": "^1.6.3",
+    "aos": "^2.3.4",
     "astro": "^4.6.3",
     "autoprefixer": "^10.4.15",
     "canvas-confetti": "^1.9.1",
