--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12"
+  },
+  "engines": {
+    "node": "18.17.1 || >=20.3.0"
   }
 }
